работает поиск по времени
